# wasm_contract_tools

./: .gitignore  README.md
compile-tool/: Cargo.toml  readhex  readhex.rs  wasm-compile
compile-tool/src/: main.rs
contract/calculator/: Cargo.toml  abi.json  build.sh  expand.rs
contract/calculator/src/: expand.rs  lib.rs
contract/call_other/: Cargo.toml  build.sh
contract/call_other/src/: expand.rs
contract/json/: Cargo.toml
contract/json/src/: lib.rs
contract/workspace/: Cargo.toml  build.sh
docker/: dockerfile
