
[package]
name = "json"
version = "0.1.0"
authors = ["k <worileqing@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm_std = {path = "../../wasm_std"}
wasm_mid = {path = "../../wasm_mid"}
wasm2ct = {path = "../../wasm2ct"}
wasm2ct_derive = {path = "../../wasm2ct/wasm2ct_derive"}
lazy_static = { version = "1.2.0", features = ["spin_no_std"] }
wee_alloc = "0.4.5"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
smallvec = "1.6.1"
tinystr = { path = "../library/tinystr", default-features = false, features = ["alloc"] }
[lib]
crate-type = ["cdylib"]

[features]
std = ["wasm2ct/std", "wasm_mid/std"]

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
    