
[package]
name = "sample"
version = "0.1.0"
authors = ["k <worileqing@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm_std = {git = "https://gitee.com/worileqing/wasm_contract_gen.git"}
wasm_mid = {git = "https://gitee.com/worileqing/wasm_contract_gen.git"}
wasm2ct = {git = "https://gitee.com/worileqing/wasm_contract_gen.git"}
wasm2ct_derive = {git = "https://gitee.com/worileqing/wasm_contract_gen.git"}
lazy_static = { version = "1.2.0", features = ["spin_no_std"] }
wee_alloc = "0.4.5"

[lib]
crate-type = ["cdylib"]

[features]
std = ["wasm2ct/std", "wasm_mid/std"]

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
    